# nonebot-plugin-scoreboard

./: .gitignore  Dockerfile  README.md  bot.py  entrypoint.sh  pyproject.toml
private/: Dockerfile
private/answer/: bot.py  update.sh
private/checker/: checker.py
src/nonebot_plugin_scoreboard/: __init__.py  data_source.py
