[project]
name = "nonebot-plugin-scoreboard"
version = "0.1.0"
description = "A (potentially vulnerable) NoneBot plugin designed for scoring purposes."
authors = [{ name = "Mix", email = "32300164+mnixry@users.noreply.github.com" }]
dependencies = [
    "nonebot2[fastapi]==2.1.3",
    "nonebot-adapter-onebot==2.3.1", #
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "GPL-3.0" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["ruff>=0.4.4", "nb-cli>=1.4.1"]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = ["nonebot_plugin_scoreboard"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff]
lint.select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "G",     # flake8-logging-format 
    "LOG",   # flake8-logging
    "PT",    # flake8-pytest-style
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "SIM",   # flake8-simplify
    "SLF",   # flake8-self
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "F",     # Pyflakes
    "TRY",   # tryceratops
    "I",     # isort
    "UP",    # pyupgrade
    "C90",   # complexity
    "N",     # naming
    "RUF",   # Ruff-specific rules
]
lint.ignore = [
    "B008",   # Do not perform calls in argument defaults
    "TRY003", # Avoid specifying long messages outside the exception class
]
target-version = "py310"
